<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.var.attendancetracker.AppViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@drawable/gradients"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/heading"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="36sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/name"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="@={viewModel.studentName}"
            android:textColorHint="#546E7A" />

        <EditText
            android:id="@+id/subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/subject"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="@={viewModel.subject}"
            android:textColorHint="#546E7A" />

        <EditText
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/date"
            android:inputType="date"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="@={viewModel.date}"
            android:textColorHint="#546E7A" />

        <EditText
            android:id="@+id/noOfHours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/noOfHours"
            android:inputType="number"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="@={viewModel.hours}"
            android:textColorHint="#546E7A" />

        <EditText
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/status"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="@={viewModel.status}"
            android:textColorHint="#546E7A" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="20dp"
            android:background="#4CAF50"
            android:onClick="@{()-> viewModel.onButtonClicked()}"
            android:text="@string/button_text"
            android:textColor="@color/white"
            android:textSize="24sp"
            bind:toastMessage="@{viewModel.toastMessage}" />

    </LinearLayout>
</layout>
